--- a/index.html
+++ b/index.html
@@ -48,28 +48,47 @@
       text-align: center;
       background-color: #e9f5db;
     }
-    .hero h1 {
-      font-size: 2.8em;
-      margin-bottom: 15px;
-    }
-    .hero p {
-      font-size: 1.2em;
-      margin-bottom: 20px;
-    }
-    .hero button {
-      padding: 12px 24px;
-      background-color: #2a9d8f;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
+   
     }
     .cards {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
-      justify-content: center;
+      justify-content: center;.hero {
+  text-align: center;
+  background: linear-gradient(135deg, #fef3c7, #fde68a);
+  padding: 120px 20px;
+}
+
+.hero h1 {
+  font-size: 3em;
+  margin-bottom: 20px;
+  color: #1f2937;
+}
+
+.hero p {
+  font-size: 1.3em;
+  margin-bottom: 30px;
+  color: #374151;
+}
+
+.hero button {
+  padding: 14px 32px;
+  background-color: #f97316;
+  border: none;
+  border-radius: 8px;
+  color: white;
+  font-size: 1em;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.hero button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 18px rgba(0,0,0,0.2);
+}
     }
     .card {
       border: 1px solid #ddd;
@@ -202,3 +221,4 @@
 
 </body>
 </html>
+
