--- a/index.html
+++ b/index.html
@@ -5,56 +5,53 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>لنتعارب</title>
   <style>
-    body {
-      font-family: 'Cairo', sans-serif;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      color: #333;
-      scroll-behavior: smooth;
-    }
-    header {
-      background-color: #fdf6e3;
-      padding: 20px 40px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 100;
-      border-bottom: 1px solid #ddd;
-    }
-    header nav a {
-      margin-left: 20px;
-      text-decoration: none;
-      color: #333;
-      font-weight: bold;
-    }
-    header button {
-      padding: 8px 16px;
-      background-color: #f4a261;
-      border: none;
-      border-radius: 4px;
-      color: white;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    section {
-      padding: 80px 20px;
-      max-width: 900px;
-      margin: auto;
-    }
-    .hero {
-      text-align: center;
-      background-color: #e9f5db;
-    }
-   
-    }
-    .cards {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;.hero {
+    <style>
+body {
+  font-family: 'Cairo', sans-serif;
+  margin: 0;
+  padding: 0;
+  line-height: 1.6;
+  color: #333;
+  scroll-behavior: smooth;
+}
+
+header {
+  background-color: #fdf6e3;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  border-bottom: 1px solid #ddd;
+}
+
+header nav a {
+  margin-left: 20px;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+header button {
+  padding: 8px 16px;
+  background-color: #f4a261;
+  border: none;
+  border-radius: 4px;
+  color: white;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+section {
+  padding: 80px 20px;
+  max-width: 900px;
+  margin: auto;
+}
+
+/* HERO */
+.hero {
   text-align: center;
   background: linear-gradient(135deg, #fef3c7, #fde68a);
   padding: 120px 20px;
@@ -82,143 +79,71 @@
   font-weight: bold;
   cursor: pointer;
   box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-  transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 .hero button:hover {
   transform: translateY(-2px);
   box-shadow: 0 10px 18px rgba(0,0,0,0.2);
 }
-    }
-    .card {
-      border: 1px solid #ddd;
-      padding: 20px;
-      border-radius: 6px;
-      width: 250px;
-      text-align: center;
-      background-color: #fffaf0;
-    }
-    .card h3 {
-      margin-bottom: 8px;
-      color: #e76f51;
-    }
-    button.secondary {
-      background-color: #f4a261;
-      color: white;
-      margin-top: 15px;
-    }
-    footer {
-      background-color: #333;
-      color: #fff;
-      text-align: center;
-      padding: 30px 20px;
-      margin-top: 50px;
-    }
-    footer a {
-      color: #fff;
-      margin: 0 10px;
-      text-decoration: none;
-    }
-    @media (max-width: 768px) {
-      .cards {
-        flex-direction: column;
-        align-items: center;
-      }
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      header nav {
-        margin-top: 10px;
-      }
-    }
-  </style>
-</head>
-<body>
 
-  <!-- Header -->
-  <header>
-    <div class="logo">لنتعارب</div>
-    <nav>
-      <a href="#about">عن لنتعارب</a>
-      <a href="#loanwords">الكلمات الدخيلة</a>
-      <a href="#challenge">التحدي</a>
-      <a href="#share">شاركنا</a>
-    </nav>
-    <button onclick="document.getElementById('loanwords').scrollIntoView()">ابدأ من هنا</button>
-  </header>
+/* CARDS */
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
 
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1>لنتعارب… مساحة لإحياء اللغة العربية</h1>
-    <p>نحتفي بالكلمة، نناقش الدخيل، ونخوض تحديات لغوية بأسلوب بسيط ومعاصر.</p>
-    <button onclick="document.getElementById('loanwords').scrollIntoView()">ابدأ من هنا</button>
-  </section>
+.card {
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 6px;
+  width: 250px;
+  text-align: center;
+  background-color: #fffaf0;
+}
 
-  <!-- About Section -->
-  <section id="about">
-    <h2>عن لنتعارب</h2>
-    <p>لنتعارب مبادرة لغوية تهدف إلى إعادة الاعتبار للغة العربية في حياتنا اليومية، بعيدًا عن التعقيد، وقريبًا من الناس. نؤمن أن العربية لغة حيّة، تتطور، وتتأثر، وتستحق أن نفهمها ونحبها.</p>
-  </section>
+.card h3 {
+  margin-bottom: 8px;
+  color: #e76f51;
+}
 
-  <!-- Loanwords Section -->
-  <section id="loanwords">
-    <h2>الكلمات الدخيلة</h2>
-    <div class="cards">
-      <div class="card">
-        <h3>أسانسير</h3>
-        <p>أصل: فرنسية</p>
-        <p>البديل العربي: مصعد</p>
-      </div>
-      <div class="card">
-        <h3>أوكي</h3>
-        <p>أصل: إنجليزية</p>
-        <p>البديل العربي: حسنًا</p>
-      </div>
-      <div class="card">
-        <h3>لايك</h3>
-        <p>أصل: إنجليزية</p>
-        <p>البديل العربي: إعجاب</p>
-      </div>
-    </div>
-    <button class="secondary">عرض جميع الكلمات</button>
-  </section>
+button.secondary {
+  background-color: #f4a261;
+  color: white;
+  margin-top: 15px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
-  <!-- Challenge Section -->
-  <section id="challenge">
-    <h2>التحدي اللغوي لهذا الأسبوع</h2>
-    <p>هل تستطيع استخدام كلمة عربية أصيلة بدلًا من كلمة دخيلة في جملة مفهومة وسلسة؟</p>
-    <p><strong>مثال:</strong> استخدم كلمة «مصعد» بدل «أسانسير» في جملة من إنشائك.</p>
-    <button class="secondary">شارك في التحدي</button>
-  </section>
+/* FOOTER */
+footer {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 30px 20px;
+  margin-top: 50px;
+}
 
-  <!-- Why Section -->
-  <section id="why">
-    <h2>لماذا نعتني باللغة؟</h2>
-    <ul>
-      <li>لأن اللغة جزء من هويتنا</li>
-      <li>لأن الكلمات تتغير ونحتاج أن نفهمها</li>
-      <li>لأن العربية تستحق أن نستخدمها بوعي ومتعة</li>
-    </ul>
-  </section>
+footer a {
+  color: #fff;
+  margin: 0 10px;
+  text-decoration: none;
+}
 
-  <!-- Share Section -->
-  <section id="share">
-    <h2>شاركنا</h2>
-    <p>لنتعارب ليست منصة صامتة… بل مساحة نكتبها معًا. هل لديك كلمة، بديل عربي جميل، أو فكرة لتحدٍ لغوي؟</p>
-    <button class="secondary">شارك فكرتك</button>
-  </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>لنتعارب © 2026 | مساحة عربية تهتم بالكلمة ومعناها</p>
-    <p>
-      <a href="#about">عن لنتعارب</a> |
-      <a href="#share">تواصل معنا</a> |
-      <a href="#privacy">سياسة الخصوصية</a>
-    </p>
-  </footer>
-
-</body>
-</html>
-
+@media (max-width: 768px) {
+  .cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  header nav {
+    margin-top: 10px;
+  }
+}
+</style>
