--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <title>لنتعارب</title>
   <style>
     <style>
-body {
+  <body>
+
+<h1 style="text-align:center;margin-top:50px;">الموقع يعمل ✅</h1>
+
+<!-- Header -->
+<header>
   font-family: 'Cairo', sans-serif;
   margin: 0;
   padding: 0;
@@ -147,3 +152,4 @@ footer a {
   }
 }
 </style>
+
