--- a/index.html
+++ b/index.html
@@ -4,152 +4,136 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>لنتعارب</title>
+
   <style>
-    <style>
-  <body>
+    body {
+      font-family: 'Cairo', sans-serif;
+      margin: 0;
+      padding: 0;
+      line-height: 1.6;
+      color: #333;
+    }
 
-<h1 style="text-align:center;margin-top:50px;">الموقع يعمل ✅</h1>
+    header {
+      background-color: #fdf6e3;
+      padding: 20px 40px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      border-bottom: 1px solid #ddd;
+    }
 
-<!-- Header -->
+    header nav a {
+      margin-left: 20px;
+      text-decoration: none;
+      color: #333;
+      font-weight: bold;
+    }
+
+    header button {
+      padding: 8px 16px;
+      background-color: #f4a261;
+      border: none;
+      border-radius: 4px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    section {
+      padding: 80px 20px;
+      max-width: 900px;
+      margin: auto;
+    }
+
+    .hero {
+      text-align: center;
+      background: linear-gradient(135deg, #fef3c7, #fde68a);
+      padding: 120px 20px;
+    }
+
+    .hero h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
+    .hero p {
+      font-size: 1.3em;
+      margin-bottom: 30px;
+    }
+
+    .hero button {
+      padding: 14px 32px;
+      background-color: #f97316;
+      border: none;
+      border-radius: 8px;
+      color: white;
+      font-size: 1em;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .cards {
+      display: flex;
+      gap: 20px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .card {
+      border: 1px solid #ddd;
+      padding: 20px;
+      border-radius: 6px;
+      width: 250px;
+      text-align: center;
+      background-color: #fffaf0;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 30px 20px;
+      margin-top: 50px;
+    }
+
+    footer a {
+      color: #fff;
+      margin: 0 10px;
+      text-decoration: none;
+    }
+  </style>
+</head>
+
+<body>
+
 <header>
-  font-family: 'Cairo', sans-serif;
-  margin: 0;
-  padding: 0;
-  line-height: 1.6;
-  color: #333;
-  scroll-behavior: smooth;
-}
+  <div>لنتعارب</div>
+  <nav>
+    <a href="#about">عن لنتعارب</a>
+    <a href="#loanwords">الكلمات</a>
+    <a href="#challenge">التحدي</a>
+  </nav>
+</header>
 
-header {
-  background-color: #fdf6e3;
-  padding: 20px 40px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 100;
-  border-bottom: 1px solid #ddd;
-}
+<section class="hero">
+  <h1>لنتعارب… مساحة لإحياء اللغة العربية</h1>
+  <p>نحتفي بالكلمة ونقارب العربية بروح معاصرة</p>
+  <button>ابدأ من هنا</button>
+</section>
 
-header nav a {
-  margin-left: 20px;
-  text-decoration: none;
-  color: #333;
-  font-weight: bold;
-}
+<section id="loanwords">
+  <h2>كلمات دخيلة</h2>
+  <div class="cards">
+    <div class="card">أسانسير → مصعد</div>
+    <div class="card">لايك → إعجاب</div>
+    <div class="card">أوكي → حسنًا</div>
+  </div>
+</section>
 
-header button {
-  padding: 8px 16px;
-  background-color: #f4a261;
-  border: none;
-  border-radius: 4px;
-  color: white;
-  cursor: pointer;
-  font-weight: bold;
-}
+<footer>
+  <p>لنتعارب © 2026</p>
+</footer>
 
-section {
-  padding: 80px 20px;
-  max-width: 900px;
-  margin: auto;
-}
-
-/* HERO */
-.hero {
-  text-align: center;
-  background: linear-gradient(135deg, #fef3c7, #fde68a);
-  padding: 120px 20px;
-}
-
-.hero h1 {
-  font-size: 3em;
-  margin-bottom: 20px;
-  color: #1f2937;
-}
-
-.hero p {
-  font-size: 1.3em;
-  margin-bottom: 30px;
-  color: #374151;
-}
-
-.hero button {
-  padding: 14px 32px;
-  background-color: #f97316;
-  border: none;
-  border-radius: 8px;
-  color: white;
-  font-size: 1em;
-  font-weight: bold;
-  cursor: pointer;
-  box-shadow: 0 6px 12px rgba(0,0,0,0.15);
-}
-
-.hero button:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 18px rgba(0,0,0,0.2);
-}
-
-/* CARDS */
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-.card {
-  border: 1px solid #ddd;
-  padding: 20px;
-  border-radius: 6px;
-  width: 250px;
-  text-align: center;
-  background-color: #fffaf0;
-}
-
-.card h3 {
-  margin-bottom: 8px;
-  color: #e76f51;
-}
-
-button.secondary {
-  background-color: #f4a261;
-  color: white;
-  margin-top: 15px;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-/* FOOTER */
-footer {
-  background-color: #333;
-  color: #fff;
-  text-align: center;
-  padding: 30px 20px;
-  margin-top: 50px;
-}
-
-footer a {
-  color: #fff;
-  margin: 0 10px;
-  text-decoration: none;
-}
-
-@media (max-width: 768px) {
-  .cards {
-    flex-direction: column;
-    align-items: center;
-  }
-  header {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  header nav {
-    margin-top: 10px;
-  }
-}
-</style>
-
+</body>
+</html>
